saving for branch switch